--- a/games.html
+++ b/games.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=1200>, initial-scale=1.0">
-  <title>Document</title>
+  <title>Игры</title>
+  <link rel="stylesheet" href="./mainpage/normalize.css">
   <link rel="stylesheet" href="./mainpage/main.css">
   <link rel="stylesheet" href="./mainpage/header.css">
   <link rel="stylesheet" href="./mainpage/hello.css">
@@ -32,7 +33,7 @@
                   <a href="./games.html" class="menu__link>">Игры</a>
                 </li>
                 <li class="menu__item">
-                  <a href="#" class="menu__link>">Отзывы</a>
+                  <a href="./review.html" class="menu__link>">Отзывы</a>
                 </li>
               </ul>
             </nav>
