--- a/indexnew.html
+++ b/indexnew.html
@@ -24,7 +24,7 @@
       <header class="header">
         <div class="container">
           <div class="content">
-            <a href="/" class="logo">
+            <a href="./mainpage.html" class="logo">
               <img src="./img/Quiz-box.png" alt="Logo picture" class="logo__picture">
             </a>
             <nav class="menu">
@@ -36,7 +36,7 @@
                   <a href="./games.html" class="menu__link>">Игры</a>
                 </li>
                 <li class="menu__item">
-                  <a href="#" class="menu__link>">Отзывы</a>
+                  <a href="./review.html" class="menu__link>">Отзывы</a>
                 </li>
               </ul>
             </nav>
@@ -61,7 +61,7 @@
         <section class="news">
           <div class="container">
             <div class="news-section">
-              <h2 class="title titile--new">Новинки недели</h2>
+              <h2 class="title title--new">Новинки недели</h2>
               <ul class="news__list">
                 <li class="news__list-item">
                   <div class="news__header">
