--- a/review.html
+++ b/review.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="1200, initial-scale=1.0">
   <title>Отзывы</title>
   <link rel="stylesheet" href="./mainpage/normalize.css">
   <link rel="stylesheet" href="./mainpage/main.css">
@@ -26,13 +26,13 @@
             <nav class="menu">
               <ul class="menu__list">
                 <li class="menu__item">
-                  <a href="./indexnew.html" class="menu__link>">Главная</a>
+                  <a href="./indexnew.html" class="menu__link">Главная</a>
                 </li>
                 <li class="menu__item">
                   <a href="./games.html" class="menu__link">Игры</a>
                 </li>
                 <li class="menu__item">
-                  <a href="#" class="menu__link>">Отзывы</a>
+                  <a href="#" class="menu__link">Отзывы</a>
                 </li>
               </ul>
             </nav>
@@ -45,7 +45,7 @@
             <nav class="breadcrumbs">
               <ul class="breadcrumbs__list">
                 <li class="breadcrumbs__item">
-                  <a href="" class="breadcrumbs__link">Главная /</a>
+                  <a href="" class="breadcrumbs__link">Главная</a>
                 </li>
                 <li class="breadcrumbs__item">
                   <a href="" class="breadcrumbs__link">Игры</a>
@@ -175,82 +175,81 @@
             </div>
           </div>
         </section>
-
+        <section class="separator">
+          <div class="container">
+            <div class="separator__content">
+              <h2 class="separator__title">Подберем игру для Вас!</h2>
+            </div>
+          </div>
+        </section>
+        <section class="feedback__section">
+          <div class="container">
+            <div class="feedback__section-content">
+              <h2 class="feedback__section-ttile">Оставьте отзыв</h2>
+              <form class="form">
+                <div class="form__row">
+                  <input type="text" class="form__input" placeholder="Игорь Петрович">
+                  <input type="text" class="form__input" placeholder="Ссылка на профиль">
+                </div>
+                <div class="form__row">
+                  <textarea class="form__input form__input--texrarea"></textarea>
+                </div>
+                <div class="form__controls">
+                  <div class="form__controls-title">Какими услугами компании вы пользуетесь</div>
+                  <ul class="controls">
+                    <li class="controls__item">
+                      <label class="controls__elem">
+                        <input type="checkbox" class="controls__checkbox">
+                        <div class="tag  controls__tag">Остров Обезьян</div>
+                      </label>
+                    </li>
+                    <li class="controls__item">
+                      <label class="controls__elem">
+                        <input type="checkbox" class="controls__checkbox">
+                        <div class="tag controls__tag">Тур по Тайланду</div>
+                      </label>
+                    </li>
+                    <li class="controls__item">
+                      <label class="controls__elem">
+                        <input type="checkbox" class="controls__checkbox">
+                        <div class="tag controls__tag">Водопад Янг-бей</div>
+                      </label>
+                    </li>
+                    <li class="controls__item">
+                      <label class="controls__elem">
+                        <input type="checkbox" class="controls__checkbox">
+                        <div class="tag controls__tag">Тур по Индонезии</div>
+                      </label>
+                    </li>
+                    <li class="controls__item">
+                      <label class="controls__elem">
+                        <input type="checkbox" class="controls__checkbox">
+                        <div class="tag controls__tag">Никакими</div>
+                      </label>
+                    </li>
+                    <li class="controls__item">
+                      <label class="controls__elem">
+                        <input type="checkbox" class="controls__checkbox">
+                        <div class="tag controls__tag">Тур по Бали</div>
+                      </label>
+                    </li>
+                    <li class="controls__item">
+                      <label class="controls__elem">
+                        <input type="checkbox" class="controls__checkbox">
+                        <div class="tag controls__tag">Другими</div>
+                      </label>
+                    </li>
+                  </ul>
+                </div>
+                <div class="form__btns">
+                  <button type="reset" class="button form__btn button--black">Очистить</button>
+                  <button type="submit" class="button form__btn button--black">Отправить</button>
+                </div>
+              </form>
+            </div>
+          </div>
+        </section>
       </main>
-      <section class="separator">
-        <div class="container">
-          <div class="separator__content">
-            <h2 class="separator__title">Подберем игру для Вас!</h2>
-          </div>
-        </div>
-      </section>
-      <section class="inner__section">
-        <div class="container">
-          <div class="ineer__section-content">
-            <h2 class="inner__section-ttile">Оставьте отзыв</h2>
-            <form class="form">
-              <div class="form__row">
-                <input type="text" class="form__input" placeholder="Игорь Петрович">
-                <input type="text" class="form__input" placeholder="Ссылка на профиль">
-              </div>
-              <div class="form__row">
-                <textarea class="form__input form__input--texrarea"></textarea>
-              </div>
-              <div class="form__controls">
-                <div class="form__controls-title">Какими услугами компании вы пользуетесь</div>
-                <ul class="controls">
-                  <li class="controls__item">
-                    <label class="controls__elem">
-                      <input type="checkbox" class="controls__checkbox">
-                      <div class="tag  controls__tag">Остров Обезьян</div>
-                    </label>
-                  </li>
-                  <li class="controls__item">
-                    <label class="controls__elem">
-                      <input type="checkbox" class="controls__checkbox">
-                      <div class="tag controls__tag">Тур по Тайланду</div>
-                    </label>
-                  </li>
-                  <li class="controls__item">
-                    <label class="controls__elem">
-                      <input type="checkbox" class="controls__checkbox">
-                      <div class="tag controls__tag">Водопад Янг-бей</div>
-                    </label>
-                  </li>
-                  <li class="controls__item">
-                    <label class="controls__elem">
-                      <input type="checkbox" class="controls__checkbox">
-                      <div class="tag controls__tag">Тур по Индонезии</div>
-                    </label>
-                  </li>
-                  <li class="controls__item">
-                    <label class="controls__elem">
-                      <input type="checkbox" class="controls__checkbox">
-                      <div class="tag controls__tag">Никакими</div>
-                    </label>
-                  </li>
-                  <li class="controls__item">
-                    <label class="controls__elem">
-                      <input type="checkbox" class="controls__checkbox">
-                      <div class="tag controls__tag">Тур по Бали</div>
-                    </label>
-                  </li>
-                  <li class="controls__item">
-                    <label class="controls__elem">
-                      <input type="checkbox" class="controls__checkbox">
-                      <div class="tag controls__tag">Другими</div>
-                    </label>
-                  </li>
-                </ul>
-              </div>
-              <div class="form__btns">
-                <button type="reset" class="button form__btn button--black">Очистить</button>
-                <button type="submit" class="button form__btn button--black">Отправить</button>
-              </div>
-            </form>
-          </div>
-        </div>
-      </section>
     </div>
     <footer class="footer">
       <div class=" container footer__container">
@@ -261,13 +260,13 @@
           <nav class="menu">
             <ul class="menu__list">
               <li class="menu__item">
-                <a href="#" class="menu__link>">Главная</a>
+                <a href="#" class="menu__link">Главная</a>
               </li>
               <li class="menu__item">
-                <a href="#" class="menu__link>">Игры</a>
+                <a href="#" class="menu__link">Игры</a>
               </li>
               <li class="menu__item">
-                <a href="#" class="menu__link>">Отзывы</a>
+                <a href="#" class="menu__link">Отзывы</a>
               </li>
             </ul>
           </nav>
