--- a/indexnew.html
+++ b/indexnew.html
@@ -30,19 +30,31 @@
             <nav class="menu">
               <ul class="menu__list">
                 <li class="menu__item">
-                  <a href="#" class="menu__link>">Главная</a>
+                  <a href="#" class="menu__link">Главная</a>
                 </li>
                 <li class="menu__item">
-                  <a href="./games.html" class="menu__link>">Игры</a>
+                  <a href="./games.html" class="menu__link">Игры</a>
                 </li>
                 <li class="menu__item">
-                  <a href="./review.html" class="menu__link>">Отзывы</a>
+                  <a href="./review.html" class="menu__link">Отзывы</a>
                 </li>
               </ul>
             </nav>
             <address class="contacts">
               <a href="tel:+78007003030" class="contacts__phone">8 800 700 30 30</a>
-              <div class="contacts__info">График Работы</div>
+              <div class="div">
+                <div class="contacts__info">График Работы</div>
+                <div class="dropdown__menu">
+                  <ul class="dropdowm__menu-list">
+                    <li class="dropdown__item">
+                      <date class="dropdown__time">пн-вс:09:00-20:00</date>
+                    </li>
+                    <li class="dropdown__item">
+                      <date class="dropdown__date">Обед:14:00-14:30</date>
+                    </li>
+                  </ul>
+                </div>
+              </div class="div">
             </address>
           </div>
         </div>
@@ -240,13 +252,13 @@
           <nav class="menu">
             <ul class="menu__list">
               <li class="menu__item">
-                <a href="#" class="menu__link>">Главная</a>
+                <a href="#" class="menu__link">Главная</a>
               </li>
               <li class="menu__item">
-                <a href="#" class="menu__link>">Игры</a>
+                <a href="#" class="menu__link">Игры</a>
               </li>
               <li class="menu__item">
-                <a href="#" class="menu__link>">Отзывы</a>
+                <a href="#" class="menu__link">Отзывы</a>
               </li>
             </ul>
           </nav>
