--- a/games.html
+++ b/games.html
@@ -27,13 +27,13 @@
             <nav class="menu">
               <ul class="menu__list">
                 <li class="menu__item">
-                  <a href="./indexnew.html" class="menu__link>">Главная</a>
+                  <a href="./indexnew.html" class="menu__link">Главная</a>
                 </li>
                 <li class="menu__item">
-                  <a href="./games.html" class="menu__link>">Игры</a>
+                  <a href="./games.html" class="menu__link">Игры</a>
                 </li>
                 <li class="menu__item">
-                  <a href="./review.html" class="menu__link>">Отзывы</a>
+                  <a href="./review.html" class="menu__link">Отзывы</a>
                 </li>
               </ul>
             </nav>
@@ -46,7 +46,7 @@
           <nav class="breadcrumbs">
             <ul class="breadcrumbs__list">
               <li class="breadcrumbs__item">
-                <a href="" class="breadcrumbs__link">Главная /</a>
+                <a href="" class="breadcrumbs__link">Главная</a>
               </li>
               <li class="breadcrumbs__item">
                 <a href="" class="breadcrumbs__link">Игры</a>
@@ -184,10 +184,10 @@
                 <a href="#" class="menu__link>">Главная</a>
               </li>
               <li class="menu__item">
-                <a href="#" class="menu__link>">Игры</a>
+                <a href="#" class="menu__link">Игры</a>
               </li>
               <li class="menu__item">
-                <a href="#" class="menu__link>">Отзывы</a>
+                <a href="#" class="menu__link">Отзывы</a>
               </li>
             </ul>
           </nav>
