--- a/games.html
+++ b/games.html
@@ -39,7 +39,14 @@
             </nav>
             <address class="contacts">
               <a href="tel:+78007003030" class="contacts__phone">8 800 700 30 30</a>
-              <div class="contacts__info">График Работы</div>
+              <div class="work">
+                <div class="contacts__info">График Работы</div>
+                <div class="work__dropdown">
+                  <div class="work__dropdown-triangle"></div>
+                  <span class="dropdown__time">пн-вс:09:00-20:00</span>
+                  <span class="dropdown__date">Обед:14:00-14:30</span>
+                </div>
+              </div>
             </address>
           </div>
           <h1 class="hello__title hello__title-services">Игры</h1>
