--- a/indexnew.html
+++ b/indexnew.html
@@ -30,7 +30,7 @@
             <nav class="menu">
               <ul class="menu__list">
                 <li class="menu__item">
-                  <a href="#" class="menu__link">Главная</a>
+                  <a href="" class="menu__link">Главная</a>
                 </li>
                 <li class="menu__item">
                   <a href="./games.html" class="menu__link">Игры</a>
@@ -42,19 +42,14 @@
             </nav>
             <address class="contacts">
               <a href="tel:+78007003030" class="contacts__phone">8 800 700 30 30</a>
-              <div class="div">
+              <div class="work">
                 <div class="contacts__info">График Работы</div>
-                <div class="dropdown__menu">
-                  <ul class="dropdowm__menu-list">
-                    <li class="dropdown__item">
-                      <date class="dropdown__time">пн-вс:09:00-20:00</date>
-                    </li>
-                    <li class="dropdown__item">
-                      <date class="dropdown__date">Обед:14:00-14:30</date>
-                    </li>
-                  </ul>
+                <div class="work__dropdown">
+                  <div class="work__dropdown-triangle"></div>
+                  <span class="dropdown__time">пн-вс:09:00-20:00</span>
+                  <span class="dropdown__date">Обед:14:00-14:30</span>
                 </div>
-              </div class="div">
+              </div>
             </address>
           </div>
         </div>
@@ -264,26 +259,19 @@
           </nav>
           <nav class="footer__networks">
             <ul class="footer__networks-list">
-              <li class="footer__networks-item">
-                <a href="#" class="footer__networks-telegram">
-                  <img src="./img/telegram.png" alt="tlg" class="footer__telegram">
-                </a>
-
-
+              <li class="footer__networks-item footer__networks-item-tg">
+                <a href="#" class="footer__networks-telegram"></a>
               </li>
-              <li class="footer__networks-item">
+              <li class="footer__networks-item footer__networks-item-vk">
                 <a href="#" class="footer__networks-vk">
-                  <img src="./img/vk.png" alt="vk" class="footer__vk">
                 </a>
               </li>
-              <li class="footer__networks-item">
+              <li class="footer__networks-item footer__networks-item-fb">
                 <a href="#" class="footer__networks-facebook">
-                  <img src="./img/f.png" alt="fcb" class="footer__facebook">
                 </a>
               </li>
-              <li class="footer__networks-item">
+              <li class="footer__networks-item footer__networks-item-ins">
                 <a href="#" class="footer__networks-instagram">
-                  <img src="./img/in.png" alt="inst" class="footer__instagram">
                 </a>
               </li>
             </ul>
