--- a/games.html
+++ b/games.html
@@ -200,26 +200,19 @@
           </nav>
           <nav class="footer__networks">
             <ul class="footer__networks-list">
-              <li class="footer__networks-item">
-                <a href="#" class="footer__networks-telegram">
-                  <img src="./img/telegram.png" alt="tlg" class="footer__telegram">
-                </a>
-
-
+              <li class="footer__networks-item footer__networks-item-tg">
+                <a href="#" class="footer__networks-telegram"></a>
               </li>
-              <li class="footer__networks-item">
+              <li class="footer__networks-item footer__networks-item-vk">
                 <a href="#" class="footer__networks-vk">
-                  <img src="./img/vk.png" alt="vk" class="footer__vk">
                 </a>
               </li>
-              <li class="footer__networks-item">
+              <li class="footer__networks-item footer__networks-item-fb">
                 <a href="#" class="footer__networks-facebook">
-                  <img src="./img/f.png" alt="fcb" class="footer__facebook">
                 </a>
               </li>
-              <li class="footer__networks-item">
+              <li class="footer__networks-item footer__networks-item-ins">
                 <a href="#" class="footer__networks-instagram">
-                  <img src="./img/in.png" alt="inst" class="footer__instagram">
                 </a>
               </li>
             </ul>
