--- a/review.html
+++ b/review.html
@@ -38,7 +38,14 @@
             </nav>
             <address class="contacts">
               <a href="tel:+78007003030" class="contacts__phone">8 800 700 30 30</a>
-              <div class="contacts__info">График Работы</div>
+              <div class="work">
+                <div class="contacts__info">График Работы</div>
+                <div class="work__dropdown">
+                  <div class="work__dropdown-triangle"></div>
+                  <span class="dropdown__time">пн-вс:09:00-20:00</span>
+                  <span class="dropdown__date">Обед:14:00-14:30</span>
+                </div>
+              </div>
             </address>
           </div>
           <h1 class="hello__title hello__title-services">Отзывы</h1>
@@ -272,26 +279,19 @@
           </nav>
           <nav class="footer__networks">
             <ul class="footer__networks-list">
-              <li class="footer__networks-item">
-                <a href="#" class="footer__networks-telegram">
-                  <img src="./img/telegram.png" alt="tlg" class="footer__telegram">
-                </a>
-
-
+              <li class="footer__networks-item footer__networks-item-tg">
+                <a href="#" class="footer__networks-telegram"></a>
               </li>
-              <li class="footer__networks-item">
+              <li class="footer__networks-item footer__networks-item-vk">
                 <a href="#" class="footer__networks-vk">
-                  <img src="./img/vk.png" alt="vk" class="footer__vk">
                 </a>
               </li>
-              <li class="footer__networks-item">
+              <li class="footer__networks-item footer__networks-item-fb">
                 <a href="#" class="footer__networks-facebook">
-                  <img src="./img/f.png" alt="fcb" class="footer__facebook">
                 </a>
               </li>
-              <li class="footer__networks-item">
+              <li class="footer__networks-item footer__networks-item-ins">
                 <a href="#" class="footer__networks-instagram">
-                  <img src="./img/in.png" alt="inst" class="footer__instagram">
                 </a>
               </li>
             </ul>
